# gnome15

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  VERSION  configure.ac
data/udev/: Makefile.am
docs/: style_guide.md
i18n/: Makefile.am
project/: vim.project
src/plugins/sysmon/dials/: sysmon_dials_g19.py
tools/: Makefile  README.md  vim.project
